--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,6 @@
     "plugin:@typescript-eslint/eslint-recommended"
   ],
   "rules": {
-    "no-console": "warn"
+    // "no-console": "warn"
   }
 }
