--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-node_modules
+/node_modules/
 .env
 .idea/
 .vscode/
-build/
+/build/
 temp/
 coverage
 ormconfig.json
 dist
+uploads/*
+!uploads/.gitkeep
