--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "my_sales",
   "version": "1.0.0",
@@ -47,6 +48,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
+    "rate-limiter-flexible": "^8.3.0",
     "redis": "^4.7.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.25"
