--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "my_sales",
   "version": "1.0.0",
@@ -51,6 +50,7 @@
     "rate-limiter-flexible": "^8.3.0",
     "redis": "^4.7.1",
     "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.4.0",
     "typeorm": "^0.3.25"
   }
 }
