--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2016",
+    "target": "ES2020",
     "lib": ["es6"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
